--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,9 @@ Thumbs.db
 *.rc
 /.qmake.cache
 /.qmake.stash
-
+*.txt
+build/*
+__pychache__/*
 # qtcreator generated files
 *.pro.user*
 CMakeLists.txt.user*
